# home-network

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .sops.yaml  .tool-versions  Justfile  README.md  TODO.md  bun.lockb  cdk8s.yaml  crds.json  crossplane-debug.yaml  flake.nix  flow.md  future_work.md  generate-kuttl-tests.ts  kcl.mod  kuttl-test.yaml  main.ts  notes.md  package.json  pyrightconfig.json  result  secrets.json  synth.ts  the_bootstrap_plan.md  todo.md  tsconfig.json
scripts/: add-upjet-submodules.ts  config.py  generate-kuttl-tests.ts  get-version.ts  helpers.ts  import-crds.ts  patch-providers.sh  pyproject.toml  rc.sh  root_config.py  synth.ts  tasks.py  todo  tsconfig.json  upjet-make.ts
scripts/bootstrap/: dag.ts  install_secret.ts  talos_bootstrap.ts
scripts/bootstrap_talos/: bootstrap_tasks.py
scripts/kind-logs-1749679965/: kind-version.txt
scripts/kind-logs-1749679965/kind-control-plane/: inspect.json
scripts/sops/: sops-decrypt.sh  sops-encrypt.sh
scripts/sopsy_tasks/: sopsy_tasks.py
scripts/src/: configuration.py  file_collector_fixture.py  fixtures.py  hello.py  helpers.py  project_config.py  re.sh  schema_impl.py
scripts/src/ccgen/cert_manager/: __init__.py
scripts/src/ccgen/traefik/: __init__.py
scripts/src/cli/: JsonToToml.py  Test.py  cloudcoil_model_gen.py  kclRunner.py  manual_iter_test.py  manual_kcl_find.py
scripts/src/cli/artifacts/: cloudcoil_model_gen.py  fetch_crds.py  fetch_helm_values.py  fetch_kcl_mod.py  install_crds_dev.py  install_dev.py
scripts/src/config/: base.py  filters.py  schema.py
scripts/src/configuration/: __init__.py  configuration.py  load_config.py  models.py
scripts/src/helpers/: conftest_helpers.py  docker_helper.py  helpers.py  kcl_helpers.py  kuttl_helper.py  pytest_print.py
scripts/src/kcl_tasks/: conftest.py  filters.py  parametizer.py
scripts/src/kcl_tasks/automation/: kcl_kuttl_tests.py  kcl_synth_yaml.py  synth_yaml.py
scripts/src/kcl_tasks/check/: kcl_frp_verify.py  kcl_has_export.py  kcl_has_main.py  (+1 more)
scripts/src/lib/: __init__.py  common.py  config_interface.py  conftest_helpers copy.py  conftest_helpers.py  constants.py  debug.py  filter.py  find_kcl_files.py  find_proj_root.py  group.py  helpers.py  kcl_helpers.py  proj_types.py  project_iter.py  project_schema_runtime.py  runtime_config.py  schema_interface.py  test_factory.py
scripts/src/scripts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/talos/: __init__.py  bootstrap_tasks.py  extra.py
scripts/talos_home_main/: __init__.py
(+285 files in other folders)
