[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colored>=2.3.0",
    "kcl-lib>=0.11.2",
    "prompt-toolkit>=3.0.51",
    "pytest>=8.3.5",
    "rich>=14.0.0",
    "textual>=3.2.0",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
]
