[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13" # KEEP IN SYNC WITH BELOW! \/
dependencies = [
    "kcl-lib>=0.11.2",
    "pytest>=8.3.5",
    "pytest-print>=1.1.0",
    "pytest-subtests>=0.14.1",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.7.0",
    "ruff>=0.11.12",
    "toml>=0.10.2",
]

[tool.ruff]
line-length = 100
target-version = "py313" # KEEP IN SYNC WITH ABOVE! /\


[tool.pyright]
include = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
# Once we have enough tests, we can also add "-n auto" to run all of them in parallel
# For now single threaded will almost always be faster
addopts = "-ra -s -v"
testpaths = ["src/kcl_tasks"]
python_files = "kcl_*"
markers = [
    "automation: marks tests that do automation (kubectl apply, etc)",
    "validation: marks tests that validate output",
]
filterwarnings = [
    "error",
    "ignore::UserWarning:google.protobuf.runtime_version",
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]

[tool.ruff.lint]
# Enable additional lint rule sets (beyond Ruff's defaults):
# F   = Pyflakes (undefined names, unused imports, etc.)
# I   = isort (import sorting)
# UP  = pyupgrade (modernize code to newer Python syntax)
# B   = bugbear (common bugs & design issues)
# SIM = flake8-simplify (unnecessary conditionals, redundant logic)
extend-select = ["F", "I", "UP", "B", "SIM"]
